--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,15 +4,53 @@ body {
   margin: 0;
   min-height: 100%;
   font-size: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Open Sans", sans-serif;
   text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-overflow-scrolling: touch;
+  -webkit-tap-highlight-color: transparent;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5 {
+  font-family: "Playfair Display", serif;
+}
+
+button,
+input,
+textarea,
+select,
+optgroup {
+  font-family: "Open Sans", sans-serif;
+  appearance: none;
+  border: none;
+  background: none;
 }
 
 * {
   box-sizing: border-box;
+  outline: none;
 }
 
 img {
   max-width: 100%;
+}
+
+ul,
+ol {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+li {
+  margin: 0;
+}
+
+*:focus-visible {
+  outline: 1px solid hsl(133, 35%, 10%);
 }
