--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,6 +3,7 @@ body {
   padding: 0;
   margin: 0;
   min-height: 100%;
+  background-color: #E3EAE4;
   font-size: 16px;
   font-family: "Open Sans", sans-serif;
   text-rendering: optimizeLegibility;
