--- a/styles/globals.css
+++ b/styles/globals.css
@@ -32,6 +32,7 @@ optgroup {
   appearance: none;
   border: none;
   background: none;
+  /* animation-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1); */
 }
 
 * {
