--- a/styles/globals.css
+++ b/styles/globals.css
@@ -58,3 +58,13 @@ li {
 *:focus-visible {
   outline: 1px solid hsl(133, 35%, 10%);
 }
+
+.visually-hidden {
+  clip: rect(0 0 0 0);
+  clip-path: inset(50%);
+  height: 1px;
+  overflow: hidden;
+  position: absolute;
+  white-space: nowrap;
+  width: 1px;
+}
